fix gaps

--- a/src/layout/LeftBlock/style.module.scss
+++ b/src/layout/LeftBlock/style.module.scss
@@ -1,5 +1,5 @@
-@import "../../styles/variables.scss";
-@import "../../styles/mixin.scss";
+@import '../../styles/variables.scss';
+@import '../../styles/mixin.scss';
 
 .LeftBlock {
   padding-bottom: 20px;
@@ -12,7 +12,7 @@
   top: 96px;
   margin-top: 30px;
   height: calc(100vh - 96px);
-  &:only-child{
+  &:only-child {
     width: 100%;
   }
   &::-webkit-scrollbar {
